# node-protodefc

./: .gitignore  README.md  example.js  index.js  package.json  simple_protocol.pds
.circleci/: config.yml
examples/: example.js  example.pds  simple.pds  trip.js
lib/: error.js  protodef.js  types.js
lib/types/: numeric.js  utils.js
native/: Cargo.toml
native/src/: lib.rs
src/: error.js  index.js  protodef.js  serializer.js  types.js
src/types/: index.js  numeric.js  utils.js
test/: simple.test.js
